--- a/lab3/Makefile
+++ b/lab3/Makefile
@@ -3,7 +3,7 @@ COMPILER_TYPE= gnu
 CC=gcc
 
 PROG=	lab3
-SRCS=	lab3.c test3.c timer.c kbd.c
+SRCS=	lab3.c test3.c timer.c kbd.c _kbd.S
 
 CCFLAGS= -Wall
 
