--- a/proj/Makefile
+++ b/proj/Makefile
@@ -5,7 +5,7 @@ COMPILER_TYPE= gnu
 CC=gcc
 
 PROG=	proj
-SRCS=	proj.c vbe.c video_gr.c vector2D.c queue.c vehicle.c kbc.c keyboard.c timer.c track.c mouse.c bitmap.c context_menu.c font.c race.c serial.c
+SRCS=	proj.c vbe.c video_gr.c vector2D.c queue.c vehicle.c kbc.c keyboard.c timer.c track.c mouse.c bitmap.c context_menu.c font.c race.c serial.c _utilities.S _video_gr.S
 
 CCFLAGS= -Wall -O3
 
